Fixed visible scrollbars on login page

--- a/client/src/css/_common.scss
+++ b/client/src/css/_common.scss
@@ -16,6 +16,7 @@ html, body {
 .bg-prism {
     background-image: url("../images/background-prism-white.png");
     background-repeat: repeat;
+    overflow: hidden;
 }
 
 figure {
